--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escuta ai!</title>
+    <title>Escuta Ai!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Escuta ai!</a>
+            <a class="navbar-brand" href="#">Escuta Ai!</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -62,6 +62,89 @@
         </div>
     </div>
 
+    <!-- Modals -->
+    <!-- About Us Modal -->
+    <div class="modal fade" id="about-us-modal" tabindex="-1" aria-labelledby="aboutUsModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="aboutUsModalLabel">Quem somos?</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Breve informação sobre a empresa Escuta Ai! LTDA.</p>
+                    A Escuta Aí é uma empresa que se dedica a fornecer uma plataforma online para amantes de música descobrirem novas músicas, compartilharem suas playlists favoritas e se conectarem com outros entusiastas musicais. Com uma vasta biblioteca de músicas e uma interface intuitiva, a Escuta Aí oferece uma experiência personalizada e envolvente para seus usuários, permitindo-lhes explorar uma variedade de gêneros musicais, artistas e playlists curadas.
+
+                    Além disso, a empresa busca promover a descoberta de novos talentos musicais, oferecendo oportunidades para artistas emergentes divulgarem suas músicas e alcançarem um público mais amplo. A Escuta Aí também se compromete em proporcionar uma experiência de usuário de alta qualidade, garantindo uma navegação fácil, uma reprodução de música fluida e uma interação social significativa entre os usuários da plataforma.
+
+                    Em resumo, a Escuta Aí é uma empresa que visa enriquecer a vida musical de seus usuários, fornecendo uma plataforma inovadora e inspiradora para explorar, descobrir e compartilhar música de forma conveniente e cativante.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+          <!-- 2 -->       
+    <div class="container mt-4">
+        <!-- Playlists -->
+        <div class="row">
+            <div class="col">
+                <h2>Playlist Antigas</h2>
+                <ul class="list-group">
+                    <li class="list-group-item">Leonardo, Eduardo Costa - Boate Azul </li>
+                    <li class="list-group-item">Milionário e José Rico - Decida - Jogo Do Amor - Tribunal Do Amor - Meu Martírio </li>
+                    <li class="list-group-item">Trio Parada Dura - As Andorinhas</li>
+                </ul>
+            </div>
+            <!-- Add more playlists as needed -->
+        </div>
+        
+        <!-- Music Player -->
+        <div class="row mt-4">
+            <div class="col">
+                <audio id="audio-player" controls>
+                    <source src="../Aula 10/audios/musicamenos.mp4" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <div class="controls mt-3">
+                    <button id="prev-btn" class="btn btn-secondary me-2">Preview</button>
+                    <button id="play-pause-btn" class="btn btn-primary me-2">Play</button>
+                    <button id="next-btn" class="btn btn-secondary">Next</button>
+                </div>
+            </div>
+        </div>
+    </div>
+ <!-- 3 -->
+ <div class="container mt-4">
+    <!-- Playlists -->
+    <div class="row">
+        <div class="col">
+            <h2>Playlist Antigas</h2>
+            <ul class="list-group">
+                <li class="list-group-item">Leonardo, Eduardo Costa - Boate Azul </li>
+                <li class="list-group-item">Milionário e José Rico - Decida - Jogo Do Amor - Tribunal Do Amor - Meu Martírio </li>
+                <li class="list-group-item">Trio Parada Dura - As Andorinhas</li>
+            </ul>
+        </div>
+        <!-- Add more playlists as needed -->
+    </div>
+    
+    <!-- Music Player -->
+    <div class="row mt-4">
+        <div class="col">
+            <audio id="audio-player" controls>
+                <source src="../Aula 10/audios/musicamenos.mp4" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+            <div class="controls mt-3">
+                <button id="prev-btn" class="btn btn-secondary me-2">Preview</button>
+                <button id="play-pause-btn" class="btn btn-primary me-2">Play</button>
+                <button id="next-btn" class="btn btn-secondary">Next</button>
+            </div>
+        </div>
+    </div>
+</div>
     <!-- Modals -->
     <!-- About Us Modal -->
     <div class="modal fade" id="about-us-modal" tabindex="-1" aria-labelledby="aboutUsModalLabel" aria-hidden="true">
